<resources>
    <string name="app_name" translatable="false">KuizKuy!</string>
    <string name="landing_description">Please select one of the topics below to get started</string>
    <string name="choose_topic">Select a Quiz Topic</string>
    <string name="topic1" translatable="false">Topic 1</string>
    <string name="topic2" translatable="false">Topic 2</string>
    <string name="topic3" translatable="false">Topic 3</string>
    <string name="quiz_number" translatable="false">1.</string>
    <string name="question" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fringilla ut morbi tincidunt augue interdum.</string>
    <string name="choose_answer">Select Answer</string>
    <string name="type_answer">Type Answer</string>
    <string name="next_answer">Continue</string>
    <string name="answer1" translatable="false">Answer 1</string>
    <string name="answer2" translatable="false">Answer 2</string>
    <string name="answer3" translatable="false">Answer 3</string>
    <string name="congrats">Congratulations, you have successfully completed the quiz</string>
    <string name="your_score">Your Score</string>
    <string name="score" translatable="false">100/100</string>
    <string name="btn_about" translatable="false">About App</string>
    <string name="desc_about">KuizKuy! is an app that provides many interesting questions about general knowledge. KuizKuy! has a mission to provide as much knowledge as possible 🔥🔥.</string>
    <string name="answer_here">Answer here!</string>
    <string name="back">Back</string>
    <string name="about_app_title">About KuizKuy!</string>
    <string name="develop_title" translatable="false">Developed by</string>
    <string name="anditorizkyka" translatable="false">anditorizkyka</string>
    <string name="maruffirdaus" translatable="false">maruffirdaus</string>
    <string name="view_answer">View Answers</string>
    <string name="finish">Finish</string>
    <string name="answer" translatable="false">Answer</string>
    <string name="answer_content" translatable="false">Question Answer</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>

    <!-- Topic 1: Geography -->
    <string name="geography">Geography</string>

    <string-array name="question1">
        <item>What is the name of the capital city of D. I. Yogyakarta Province?</item>
        <item>How many provinces are there in Indonesia?</item>
        <item>How many islands are there in Indonesia?</item>
    </string-array>

    <string-array name="question1_answer1">
        <item>Surakarta</item>
        <item>38</item>
        <item>16.771</item>
    </string-array>

    <string-array name="question1_answer2">
        <item>Yogyakarta</item>
        <item>36</item>
        <item>15.544</item>
    </string-array>

    <string-array name="question1_answer3">
        <item>Purwakarta</item>
        <item>34</item>
        <item>17.754</item>
    </string-array>

    <string-array name="question1_true_answer">
        <item>Yogyakarta</item>
        <item>38</item>
        <item>16.771</item>
    </string-array>

    <!-- Topic 2: History -->
    <string name="history">History</string>

    <string-array name="question2">
        <item>When did World War II occur?</item>
        <item>Who won in World War II?</item>
        <item>Who is the 2nd vice president of the Republic of Indonesia?</item>
    </string-array>

    <string-array name="question2_answer1">
        <item>2003 to 2006</item>
        <item>Allies</item>
        <item>Sri Sultan Hamengkubuwono IX</item>
    </string-array>

    <string-array name="question2_answer2">
        <item>1990 to 1998</item>
        <item>Axis</item>
        <item>B. J. Habibie</item>
    </string-array>

    <string-array name="question2_answer3">
        <item>1939 to 1945</item>
        <item>Germany</item>
        <item>Abdurrahman Wahid</item>
    </string-array>

    <string-array name="question2_true_answer">
        <item>1939 to 1945</item>
        <item>Allies</item>
        <item>Sri Sultan Hamengkubuwono IX</item>
    </string-array>

    <!-- Topic 3: Mathematics -->
    <string name="mathematics">Mathematics</string>

    <string-array name="question3">
        <item>1+1</item>
        <item>2+2</item>
        <item>3+3</item>
    </string-array>

    <string-array name="question3_true_answer">
        <item>2</item>
        <item>4</item>
        <item>6</item>
    </string-array>
</resources>